[gd_scene load_steps=2 format=3 uid="uid://c74rgoffcvsim"]

[ext_resource type="Script" path="res://assets/web/user_control.gd" id="1_xkmvs"]

[node name="UserControl" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 755.0
offset_top = 192.0
offset_right = -28.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xkmvs")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "My Programs:"

[node name="ProgramList" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ControlContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Control" type="Control" parent="ControlContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewName" type="LineEdit" parent="ControlContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
placeholder_text = "name cannot be empty"

[node name="AddButton" type="Button" parent="ControlContainer"]
layout_mode = 2
text = "+ new"

[connection signal="pressed" from="ControlContainer/AddButton" to="." method="_on_add_button_pressed"]
